# goit-ds-hw-02

./: create_db.py  pyproject.toml  queries.py  queries_ds_hw_02.sql  seed.py  tasks_management.db  tasks_management.sql
