[project]
name = "goit-ds-hw-02"
version = "0.1.0"
description = ""
authors = [
    {name = "Andrii-Rublov",email = "rublyovandrew@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faker (>=35.0.0,<36.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
